# halve-sheet-music

./: Makefile  README.md  halve-sheet-music  halve-sheet-music.cabal
src/: halve-sheet-music.py  png-halve-sheet-music.hs
