name:            halve-sheet-music
version:         0.1
license:         MIT
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:   base

executable:      halve-sheet-music
main-is:         Main.hs
hs-source-dirs:  src

exposed-modules: halve-sheet-music
hs-source-dirs:  src
