name:            halve-sheet-music
version:         0.1
license:         MIT
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        Halve sheet music PDFs for small screens.
build-type:      Simple
build-depends:
    base
  , bytestring
  , containers
  , JuicyPixels

executable:      png-halve-sheet-music
main-is:         png-halve-sheet-music.hs
hs-source-dirs:  src
ghc-options:     -Wall -O3
